feat: Modify database definition.
